<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.archeotour.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/logomainactivity" 
        android:contentDescription="@string/contentDescription_logoHome"/>

    <Button
        android:id="@+id/siteSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonLabel_siteSearch"
         android:onClick="startSearchActivity" />

    <Button
        android:id="@+id/showMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/siteSearch"
        android:text="@string/buttonLabel_showMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="startGPSMapActivity" />

</RelativeLayout>