<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.archeotour.MainSiteActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/MeteowebView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startSiteDescriptionActivity"
                android:text="@string/buttonLabel_description" />
            <!--
            <Button
                android:id="@+id/button_pdi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonLabel_pdi"
                android:onClick="startPDIActivity" />
            -->

            <Button
                android:id="@+id/button_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startNewsActivity"
                android:text="@string/buttonLabel_news" />

            <Button
                android:id="@+id/button_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startInfoActivity"
                android:text="@string/buttonLabel_info" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>